objects/GEMS_SBC_BB_Form__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name_Text__c</fullName>
        <formula>IF(GEMS_SBC_Request__c!=null,
IF(GEMS_SBC_Request__r.Opportunity_Link__c!=null,GEMS_SBC_Request__r.Opportunity_Link__r.Account.Name,
GEMS_SBC_Request__r.Case__r.Account.Name),IF(GEMS_Benefit_Booklet_Request__r.Opportunity_Link__c!=null,
GEMS_Benefit_Booklet_Request__r.Opportunity_Link__r.Account.Name,GEMS_Benefit_Booklet_Request__r.Case__r.Account.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>IF(GEMS_SBC_Request__c!=null,GEMS_SBC_Request__r.Account_Name__c,GEMS_Benefit_Booklet_Request__r.Account_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>IF(GEMS_SBC_Request__c!=null,GEMS_SBC_Request__r.Account_Number__c,GEMS_Benefit_Booklet_Request__r.Account_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Associated_Benefit_Agreements__c</fullName>
        <label>Associated Benefit Agreements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBDM_Request_Trans_Id__c</fullName>
        <description>cbdmContractRequestTransId received from CBDM. CBDM&apos;s ID that tracks GEMS&apos;s sbc/bb form request</description>
        <externalId>true</externalId>
        <label>CBDM Request Trans Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CBDM_Status_Message__c</fullName>
        <label>CBDM Status Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBDM_Status__c</fullName>
        <label>CBDM Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carved_Out_Benefits_From_Other_Vendors__c</fullName>
        <label>Carved Out Benefits From Other Vendors?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_SharePoint_Link__c</fullName>
        <label>Case SharePoint Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>IF(GEMS_SBC_Request__c!=null,TEXT(GEMS_SBC_Request__r.Status__c),TEXT(GEMS_Benefit_Booklet_Request__r.Status__c))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <formula>IF(GEMS_SBC_Request__c!=null,HYPERLINK(&quot;/&quot;
&amp; GEMS_SBC_Request__r.Case__r.Id
,GEMS_SBC_Request__r.Case__r.CaseNumber),HYPERLINK(&quot;/&quot;
&amp; GEMS_Benefit_Booklet_Request__r.Case__r.Id
,GEMS_Benefit_Booklet_Request__r.Case__r.CaseNumber))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Submission Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <formula>IF(GEMS_SBC_Request__c!=null,TEXT(GEMS_SBC_Request__r.Category__c),TEXT(GEMS_Benefit_Booklet_Request__r.Category__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chinese_specify_BAs__c</fullName>
        <inlineHelpText>Specify Chinese BAs</inlineHelpText>
        <label>Chinese, specify BAs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <formula>IF(GEMS_SBC_Request__c!=null,TEXT(GEMS_SBC_Request__r.Cluster__c),TEXT(GEMS_Benefit_Booklet_Request__r.Cluster__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_No_of_Members__c</fullName>
        <label>Current # of Members</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Did_HCSC_Create_the_SBC_or_BB_Last_Year__c</fullName>
        <label>Did HCSC Create the SBC or BB Last Year?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distribution_Method__c</fullName>
        <label>Distribution Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Print/Mail</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <formula>IF(GEMS_SBC_Request__c!=null,TEXT(GEMS_SBC_Request__r.District__c),TEXT(GEMS_Benefit_Booklet_Request__r.District__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <formula>IF(GEMS_SBC_Request__c!=null,IF(ISNULL(GEMS_SBC_Request__r.Effective_Date__c),&apos;&apos;,TEXT(MONTH(GEMS_SBC_Request__r.Effective_Date__c)) +&apos;/&apos;+ TEXT(DAY(GEMS_SBC_Request__r.Effective_Date__c)) +&apos;/&apos;+ TEXT(YEAR(GEMS_SBC_Request__r.Effective_Date__c)) ),IF(ISNULL(GEMS_Benefit_Booklet_Request__r.Effective_Date__c),&apos;&apos;,TEXT(MONTH(GEMS_Benefit_Booklet_Request__r.Effective_Date__c))+&apos;/&apos;+TEXT(DAY(GEMS_Benefit_Booklet_Request__r.Effective_Date__c))+&apos;/&apos;+TEXT(YEAR(GEMS_Benefit_Booklet_Request__r.Effective_Date__c))))</formula>
        <label>Effective Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Id__c</fullName>
        <label>Form Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Link__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp;Id,&apos;View Form&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Request_Type__c</fullName>
        <label>Form Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Custom SBC</fullName>
                </value>
                <value>
                    <fullName>Custom Benefit Booklet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_Status__c</fullName>
        <label>Form Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Sent to CBDM</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Internal Approval Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Published to Portal</fullName>
                </value>
                <value>
                    <fullName>Sent for Translation</fullName>
                </value>
                <value>
                    <fullName>Sent for Print</fullName>
                </value>
                <value>
                    <fullName>Mailing Completed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>Revision Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEMS_Benefit_Booklet_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Admin Request</label>
        <referenceTo>GEMS_Contract_Admin_Request__c</referenceTo>
        <relationshipLabel>Benefit Booklet Forms</relationshipLabel>
        <relationshipName>GEMS_BB_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GEMS_SBC_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Admin Request</label>
        <referenceTo>GEMS_Contract_Admin_Request__c</referenceTo>
        <relationshipLabel>SBC Forms</relationshipLabel>
        <relationshipName>GEMS_SBC_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grandfathered_Benefit_s__c</fullName>
        <label>Grandfathered Benefit(s)?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCSC_Division__c</fullName>
        <formula>IF(GEMS_SBC_Request__c!=null,TEXT(GEMS_SBC_Request__r.Hidden_HCSC_Division__c),TEXT(GEMS_Benefit_Booklet_Request__r.Hidden_HCSC_Division__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HCSC Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Resubmitted_Date__c</fullName>
        <label>Last Resubmitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lines_of_Business__c</fullName>
        <formula>IF(GEMS_SBC_Request__c!=null,TEXT(GEMS_SBC_Request__r.Line_of_Business__c),TEXT(GEMS_Benefit_Booklet_Request__r.Line_of_Business__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lines of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <formula>IF(GEMS_SBC_Request__c!=null,TEXT(GEMS_SBC_Request__r.Market_Segment__c),TEXT(GEMS_Benefit_Booklet_Request__r.Market_Segment__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mental_Health__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dependent field to &quot;Carved Out Benefits From Other Vendors&quot;</description>
        <inlineHelpText>Dependent field to &quot;Carved Out Benefits From Other Vendors&quot;</inlineHelpText>
        <label>Mental Health</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Essential_Coverage_MEC__c</fullName>
        <label>Minimum Essential Coverage/MEC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_Value_Standard_MV__c</fullName>
        <label>Minimum Value Standard/MV</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Navajo_specify_BAs__c</fullName>
        <inlineHelpText>Specify Navajo BAs</inlineHelpText>
        <label>Navajo, specify BAs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_BAs__c</fullName>
        <label>Number of BAs</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_documents_being_requested__c</fullName>
        <label>Number of documents being requested</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Start_Date__c</fullName>
        <formula>IF(GEMS_SBC_Request__c!=null,IF(ISNULL(GEMS_SBC_Request__r.Open_Enrollment_Start_Date__c),&apos;&apos;,TEXT(MONTH(GEMS_SBC_Request__r.Open_Enrollment_Start_Date__c)) +&apos;/&apos;+ TEXT(DAY(GEMS_SBC_Request__r.Open_Enrollment_Start_Date__c)) +&apos;/&apos;+ TEXT(YEAR(GEMS_SBC_Request__r.Open_Enrollment_Start_Date__c)) ),IF(ISNULL(GEMS_Benefit_Booklet_Request__r.Open_Enrollment_Start_Date__c),&apos;&apos;,TEXT(MONTH(GEMS_Benefit_Booklet_Request__r.Open_Enrollment_Start_Date__c))+&apos;/&apos;+TEXT(DAY(GEMS_Benefit_Booklet_Request__r.Open_Enrollment_Start_Date__c))+&apos;/&apos;+TEXT(YEAR(GEMS_Benefit_Booklet_Request__r.Open_Enrollment_Start_Date__c))))</formula>
        <label>Open Enrollment Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_SharePoint_Link__c</fullName>
        <label>Opportunity SharePoint Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>IF(GEMS_SBC_Request__c!=null,HYPERLINK(&quot;/&quot; 
&amp; GEMS_SBC_Request__r.Opportunity_Link__r.Id 
,GEMS_SBC_Request__r.Opportunity_Link__r.Name),HYPERLINK(&quot;/&quot; 
&amp; GEMS_Benefit_Booklet_Request__r.Opportunity_Link__r.Id 
,GEMS_Benefit_Booklet_Request__r.Opportunity_Link__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dependent field to &quot;Carved Out Benefits From Other Vendors&quot;</description>
        <inlineHelpText>Dependent field to &quot;Carved Out Benefits From Other Vendors&quot;</inlineHelpText>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>IF(CONTAINS(OwnerId,&apos;005&apos;), HYPERLINK(&apos;/&apos;&amp;OwnerId&amp;&apos;?noredirect=1&amp;isUserEntityOverride=1&apos;,Owner:User.FirstName&amp;&apos; &apos;&amp;Owner:User.LastName), HYPERLINK(&apos;/p/own/Queue/d?id=&apos;&amp;Owner:Queue.Id,Owner:Queue.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Polish_specify_BAs__c</fullName>
        <inlineHelpText>Specify Polish BAs</inlineHelpText>
        <label>Polish, specify BAs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Account</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Material Modification</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Rush__c</fullName>
        <label>Reason for Rush</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resubmission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resubmission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Returned_User_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Returned User ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SBC_BB_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rush__c</fullName>
        <label>Rush?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rx__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dependent field to &quot;Carved Out Benefits From Other Vendors&quot;</description>
        <inlineHelpText>Dependent field to &quot;Carved Out Benefits From Other Vendors&quot;</inlineHelpText>
        <label>Rx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Do_Not_Send_Reminder_Mail__c</fullName>
        <label>Send/Do Not Send Reminder Mail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Email_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Reminder_Mail__c</fullName>
        <label>Send Reminder Mail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Send 30 Days Reminder Mail</fullName>
                </value>
                <value>
                    <fullName>Send 45 Days Reminder Mail</fullName>
                </value>
                <value>
                    <fullName>Send 60 Days Reminder Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <label>Ship-To Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spanish_specify_BAs__c</fullName>
        <inlineHelpText>Specify Spanish BAs</inlineHelpText>
        <label>Spanish, specify BAs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Handling__c</fullName>
        <description>Any special handling needed?</description>
        <inlineHelpText>Any special handling needed?</inlineHelpText>
        <label>Special Handling</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Performance Guarantee</fullName>
                </value>
                <value>
                    <fullName>Priority</fullName>
                </value>
                <value>
                    <fullName>Religious Exemption</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_fully_insured_or_Blue_Direction__c</fullName>
        <label>Standard fully-insured/Blue Direction?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Sub_Type__c</fullName>
        <formula>IF(GEMS_SBC_Request__c!=null,GEMS_SBC_Request__r.Submission_Sub_Type__c, GEMS_Benefit_Booklet_Request__r.Submission_Sub_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submission Sub Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Type__c</fullName>
        <formula>IF(GEMS_SBC_Request__c!=null,GEMS_SBC_Request__r.Submission_Type__c, GEMS_Benefit_Booklet_Request__r.Submission_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submission Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SBC_BB_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tagalog_specify_BAs__c</fullName>
        <inlineHelpText>Specify Tagalog BAs</inlineHelpText>
        <label>Tagalog, specify BAs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translation__c</fullName>
        <inlineHelpText>Translation Needed?</inlineHelpText>
        <label>Translation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Request Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Form_Id__c</columns>
        <columns>Form_Link__c</columns>
        <columns>Form_Request_Type__c</columns>
        <columns>Form_Status__c</columns>
        <columns>Owner__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Case__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Benefit_Booklet_Analyst_IL_Queue_GEMS_SBC_BB_Form</fullName>
        <columns>Form_Id__c</columns>
        <columns>Form_Link__c</columns>
        <columns>Form_Status__c</columns>
        <columns>Owner__c</columns>
        <columns>Account_Name_Text__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Case__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Rush__c</columns>
        <columns>Distribution_Method__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Benefit Booklet Analyst IL Queue</label>
        <queue>Benefit_Booklet_Analyst_IL_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Benefit_Booklet_Analyst_MT_Queue_GEMS_SBC_BB_Form</fullName>
        <columns>Form_Id__c</columns>
        <columns>Form_Link__c</columns>
        <columns>Form_Status__c</columns>
        <columns>Owner__c</columns>
        <columns>Account_Name_Text__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Case__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>Benefit Booklet Analyst MT Queue</label>
        <queue>Benefit_Booklet_Analyst_MT_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Benefit_Booklet_Analyst_NM_Queue_GEMS_SBC_BB_Form</fullName>
        <columns>Form_Id__c</columns>
        <columns>Form_Link__c</columns>
        <columns>Form_Status__c</columns>
        <columns>Owner__c</columns>
        <columns>Account_Name_Text__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Case__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>Benefit Booklet Analyst NM Queue</label>
        <queue>Benefit_Booklet_Analyst_NM_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Benefit_Booklet_Analyst_OK_Queue_GEMS_SBC_BB_Form</fullName>
        <columns>Form_Id__c</columns>
        <columns>Form_Link__c</columns>
        <columns>Form_Status__c</columns>
        <columns>Owner__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Case__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>Benefit Booklet Analyst OK Queue</label>
        <queue>Benefit_Booklet_Analyst_OK_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Benefit_Booklet_Analyst_TX_Queue_GEMS_SBC_BB_Form</fullName>
        <columns>Form_Id__c</columns>
        <columns>Form_Link__c</columns>
        <columns>Form_Status__c</columns>
        <columns>Owner__c</columns>
        <columns>Account_Name_Text__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Case__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>Benefit Booklet Analyst TX Queue</label>
        <queue>Benefit_Booklet_Analyst_TX_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Benefit_Booklet_Form</fullName>
        <columns>Form_Id__c</columns>
        <columns>Form_Link__c</columns>
        <columns>Form_Status__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Case__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>GEMS_SBC_BB_Form__c.GEMS_BB_Form</value>
        </filters>
        <filters>
            <field>Form_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>My Benefit Booklet Forms</label>
        <sharedTo>
            <role>Contract_Administration</role>
            <role>GEMS_Contract_Specialist</role>
            <role>GEMS_Contract_Specialist_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_SBC_Form</fullName>
        <columns>Form_Id__c</columns>
        <columns>Form_Link__c</columns>
        <columns>Form_Status__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Case__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>GEMS_SBC_BB_Form__c.GEMS_SBC_Form</value>
        </filters>
        <filters>
            <field>Form_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>My SBC Forms</label>
        <sharedTo>
            <roleAndSubordinates>GEMS_SBC_Analyst</roleAndSubordinates>
            <roleAndSubordinates>GEMS_SBC_Analyst_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SBC_Analyst_IL_Queue_GEMS_SBC_BB_Form</fullName>
        <columns>Form_Id__c</columns>
        <columns>Form_Link__c</columns>
        <columns>Form_Status__c</columns>
        <columns>Owner__c</columns>
        <columns>Account_Name_Text__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Case__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>SBC Analyst IL Queue</label>
        <queue>SBC_Analyst_IL_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SBC_Analyst_MT_Queue_GEMS_SBC_BB_Form</fullName>
        <columns>Form_Id__c</columns>
        <columns>Form_Link__c</columns>
        <columns>Form_Status__c</columns>
        <columns>Owner__c</columns>
        <columns>Account_Name_Text__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Case__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>SBC Analyst MT Queue</label>
        <queue>SBC_Analyst_MT_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SBC_Analyst_NM_Queue_GEMS_SBC_BB_Form</fullName>
        <columns>Form_Id__c</columns>
        <columns>Form_Link__c</columns>
        <columns>Form_Status__c</columns>
        <columns>Owner__c</columns>
        <columns>Account_Name_Text__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Case__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>SBC Analyst NM Queue</label>
        <queue>SBC_Analyst_NM_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SBC_Analyst_OK_Queue_GEMS_SBC_BB_Form</fullName>
        <columns>Form_Id__c</columns>
        <columns>Form_Link__c</columns>
        <columns>Form_Status__c</columns>
        <columns>Owner__c</columns>
        <columns>Account_Name_Text__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Case__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>SBC Analyst OK Queue</label>
        <queue>SBC_Analyst_OK_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SBC_Analyst_TX_Queue_GEMS_SBC_BB_Form</fullName>
        <columns>Form_Id__c</columns>
        <columns>Form_Link__c</columns>
        <columns>Form_Status__c</columns>
        <columns>Owner__c</columns>
        <columns>Account_Name_Text__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Case__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>SBC Analyst TX Queue</label>
        <queue>SBC_Analyst_TX_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Forms</pluralLabel>
    <recordTypes>
        <fullName>GEMS_BB_Form</fullName>
        <active>true</active>
        <label>GEMS BB Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>GEMS_SBC_Form</fullName>
        <active>true</active>
        <label>GEMS SBC Form</label>
    </recordTypes>
</CustomObject>